# qswaps

./: compare_sat_heur.py  compare_sat_layers.py  examples.py  gen_problems.py  main.py  path_mip.py  plot.py  postprocess.py  problem.py  qswaps.py  read_layer_comparison.py  requirements.txt
experiments/: compare_sat_layers-2023-10-05.txt  results-2023-09-20.txt  stats.py  test-2023-09-19-part2.txt
experiments/layers_nonoptimal/: sz4_swt3_0.json  sz4_swt3_1.json  sz4_swt3_11.json  sz4_swt3_13.json  sz4_swt3_15.json  sz4_swt3_16.json  sz4_swt3_17.json  sz4_swt3_19.json  sz4_swt3_2.json  sz4_swt3_20.json  sz4_swt3_21.json  sz4_swt3_22.json  sz4_swt3_23.json  sz4_swt3_25.json  sz4_swt3_26.json  sz4_swt3_27.json  sz4_swt3_28.json  sz4_swt3_29.json  sz4_swt3_3.json  sz4_swt3_30.json  sz4_swt3_31.json  sz4_swt3_32.json  sz4_swt3_34.json  sz4_swt3_35.json  sz4_swt3_37.json  sz4_swt3_38.json  sz4_swt3_4.json  sz4_swt3_41.json  sz4_swt3_43.json  sz4_swt3_44.json  sz4_swt3_45.json  sz4_swt3_46.json  sz4_swt3_47.json  sz4_swt3_48.json  sz4_swt3_5.json  sz4_swt3_6.json  sz4_swt3_7.json  sz4_swt3_8.json  sz4_swt3_9.json  sz5_swt3_0.json  (+109 more)
heuristic/: Cargo.toml
heuristic/src/: main.rs
qswap_beam/: Cargo.toml  pyproject.toml
qswap_beam/src/: lib.rs
qswap_colgen/: Cargo.toml  pyproject.toml
qswap_colgen/src/: lib.rs
