[package]
name = "qswap_beam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qswap_beam"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
log = "0.4.20"
min-max-heap = "1.3.0"
ordered-float = "3.9.1"
rand = "0.8.5"
smallvec = "1.11.0"
