[package]
name = "qswap_colgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qswap_colgen"
crate-type = ["cdylib"]

[dependencies]
grb = "1.3.0"
log = "0.4.20"
ordered-float = "4.1.1"
pyo3 = "0.19.0"
qswap_beam = { version = "0.1.0", path = "../qswap_beam" }

[dev-dependencies]
test-log = "0.2.13"
env_logger = "0.10.0"
